@@ -5,9 +5,11 @@ KOfficeCore:
 KoText:
 - Improve hierarchical numbering - doesn't require using a suffix of '.' anymore,
 and doesn't copy over the prefix and suffix from parent levels anymore (#40911).
+- PgUp/PgDown works better than before when "move the caret" is enabled (#45246)
 - Fixed painting of non-breakable-spaces (could show up as a visible square)
 - Implemented painting of non-breakable-spaces when "draw formatting characters" is on
 - Fixed crash (e.g. happening with 'section title' variable, #61735)
+- Fixed pasting of plain text (so that it creates new pages if necessary, #58651)
 
 Changes after KOffice-1.3-beta2
 ===============================
